--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/fred-smu/TP-Express#readme",
   "dependencies": {
     "axios": "^0.19.2",
-    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "firebase": "^7.13.1",
