--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "react-router-dom": "^5.1.2",
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
