--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,13 @@
 {
   "name": "reactpractice",
   "version": "0.1.0",
+  "proxy": "http://localhost:3001/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "firebase": "^7.13.1",
     "react": "^16.13.1",
