--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react-router-dom": "^5.1.2",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "walmart": "0.0.4"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
