--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "client": "cd client && npm start",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run seed && npm run build"
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
